@@ -1,6 +1,7 @@
 Version 0.6.4
 -------------
 Completed transitioning to the input values for the binary version.
+added print.pfda.single.b
 
 Version 0.6.3
 -------------
